# pbg-cpm

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  Singularity.def  pyproject.toml  workspace.yaml
.github/workflows/: publish-dashboard.yml  publish-reports.yml
.pbg/: hpc.env.example
.pbg/schemas/: study.schema.json
bench/cc3d/: README.md  blocks.piff  blocks_96.piff  cc3d_bench.py  gen_pif.py
cpm/: __init__.py  crypt3d.py  ftu.py  metrics.py  pack.py  schema.py
cpm/composites/: crypt.py
cpm/processes/: cpm_process.py
cpm/subcellular/: boolean.py  sbml.py
crates/cpm-bench/: Cargo.toml
crates/cpm-bench/src/: main.rs
crates/cpm-core/: Cargo.toml
crates/cpm-core/src/: connectivity.rs  energy.rs  external.rs  field.rs  init.rs  junction.rs  lattice.rs  length.rs  lib.rs  membrane.rs  mitosis.rs  parallel.rs  sweep.rs  world.rs
crates/cpm-core/tests/: junction.rs  membrane.rs  property.rs  remove.rs
crates/cpm-py/: Cargo.toml
crates/cpm-py/src/: lib.rs
dashboard/: config.json  index.html
dashboard/api/: analysis-viewers.json  catalog.json  composites.json  investigation-notebooks.json  investigation-summaries.json  investigations.json  references-bib.json  registry.json  simulations.json  visualization-classes.json  workspace.json
dashboard/api/composite-state/: pbg_tellurium.composites.decay-demo.json  pbg_tellurium.composites.decay-with-viz.json  pbg_tellurium.composites.steady-state.json
dashboard/api/inputs/: _global.json  glazier-graner-1993.json
dashboard/api/investigation/: glazier-graner-1993.json
dashboard/api/investigation-graph/: glazier-graner-1993.json
dashboard/api/study/: annealing.json  cell_sorting.json  checkerboard.json  dispersal_no_separate.json  dispersal_separate.json  dispersal_sloughing.json  engulfment.json  global_equilibration.json  partial_sorting.json  position_reversal.json  vacancy_cavity.json
dashboard/api/study-charts/: annealing.json  cell_sorting.json  checkerboard.json  dispersal_no_separate.json  dispersal_separate.json  dispersal_sloughing.json  engulfment.json  global_equilibration.json  partial_sorting.json  position_reversal.json  vacancy_cavity.json
dashboard/assets/: data-source.js  walkthrough.js
dashboard/bigraph-loom/: index.html
dashboard/bigraph-loom/assets/: index-BiaqTnQr.js  index-CVT9h38l.css  (+6 more)
dashboard/investigation-notebooks/: glazier-graner-1993.ipynb  glazier-graner-1993.py
data/: bacterium_macrophage.json  cellsort_2d.json  cellsort_3d.json  connectivity_2d.json  connectivity_3d.json  connectivity_gap.json  crypt3d.json  crypt_differentiation.json  growth_mitosis.json  hra_ftu.json  hra_mibitof.json  index.json  length_rods.json  sediment_sorting.json  spheroid_3d.json
demos/: cell_sorting_2d.json  cell_sorting_3d.json  run_cc3d_demos.py  run_connectivity_demos.py  run_crypt3d.py  run_crypt_differentiation.py  run_crypt_dynamics.py  run_crypt_morphogen.py  run_extra_demos.py  run_hra_ftu.py  run_hra_mibitof.py  run_junction_demo.py  run_length_demos.py  run_membrane_demo.py  run_sediment_demo.py  run_showcase.py
docs/cc3d-reference/: demo-parameters.md
pbg_cpm_studies/: __init__.py
pbg_cpm_studies/composites/: gg1993.py
pbg_cpm_studies/gg1993/: assemble.py  driver.py  engine.py  figures.py  gallery.py  metrics.py  params.py  render.py  report_card.py  run.py  types.py  validate.py
pbg_cpm_studies/visualizations/: gg1993_studies.py
scripts/: add-dataset.sh  check-no-local-paths.sh  lint-workspace.py  publish_dashboard.sh  publish_investigation_reports.py  render-dashboard.py  serve.sh
tests/: test_bindings.py  test_boolean_subcell.py  test_cell_sorting.py  test_connectivity.py  test_core_registration.py  test_cpm_coupling.py  test_crypt3d.py  test_crypt_composite.py  test_fields.py  test_gg1993_anneal_fidelity.py  test_junction.py  test_membrane.py  test_mitosis.py  test_pack.py  test_process.py  test_sbml_subcell.py  test_schema.py  test_seed_labels.py  test_set_cell_type.py
viewer/: index.html  viewer.js
workspace/gg1993_data/: validation.json
workspace/references/: papers.bib
workspace/reports/: index.html
(+139 files in other folders)
