[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "pbg-cpm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "process-bigraph",
    "libroadrunner>=2.9",
    "tellurium>=2.2",
    "pbg-tellurium",
]

[tool.maturin]
manifest-path = "crates/cpm-py/Cargo.toml"
module-name = "cpm_core"

[tool.pytest.ini_options]
pythonpath = ["."]
