[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "pbg-cpm"
version = "0.1.0"
description = "A process-bigraph Cellular Potts Model framework: a fast Rust CPM engine (2D/3D) with pluggable subcellular models, structural constraints, and metrics."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Vivarium Collective" }]
keywords = ["cellular-potts-model", "process-bigraph", "multiscale", "tissue", "vivarium"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "process-bigraph",
    "bigraph-schema",
    "bigraph-viz>=2.0.3",
    "pyyaml>=6.0",
    "jsonschema[format-nongpl]>=4.21",
    "jinja2>=3.1",
    "pypdf>=4.0",
    "matplotlib",
    "plotly",
    "vivarium-workbench",
]

[project.optional-dependencies]
# SBML/ODE subcellular models (cpm.subcellular.sbml -> pbg-tellurium/RoadRunner).
sbml = ["libroadrunner>=2.9", "tellurium>=2.2", "pbg-tellurium"]
# Human Reference Atlas FTU illustration -> CPM conversion (cpm.ftu).
ftu = ["numpy", "matplotlib"]
# Everything, for running the full demo suite.
all = ["pbg-cpm[sbml,ftu]"]

[project.urls]
Homepage = "https://github.com/vivarium-collective/pbg-cpm"
Repository = "https://github.com/vivarium-collective/pbg-cpm"

# Non-PyPI deps resolved from git so `uv sync` works in CI (publish-dashboard).
# vivarium-workbench (the dashboard/publish CLI) and pbg-tellurium (sbml extra)
# ship only 0.1.0 local placeholders with no registry entry; without these
# sources `uv sync` fails resolution before the publish step runs.
[tool.uv.sources]
vivarium-workbench = { git = "https://github.com/vivarium-collective/vivarium-workbench.git", branch = "main" }
pbg-tellurium = { git = "https://github.com/vivarium-collective/pbg-tellurium.git", branch = "main" }

[tool.maturin]
manifest-path = "crates/cpm-py/Cargo.toml"
module-name = "cpm.cpm_core"
python-source = "."

[tool.pytest.ini_options]
pythonpath = ["."]
